--- a/Documentación/Gantt/aom-chart.html
+++ b/Documentación/Gantt/aom-chart.html
@@ -1,8 +1,8 @@
 <html xmlns:ganttproject="http://ganttproject.sf.net/">
-    <head>
-        <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>GanttProject - aom</title>
-        <style>
+<head>
+<META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>GanttProject - aom</title>
+<style>
 	    A:link {
 		FONT-WEIGHT: bold;  TEXT-DECORATION: none;
 		FONT-SIZE: 14px ; COLOR: black;
@@ -76,10 +76,10 @@
 	    }
 
 	    </style>
-    </head>
-    <body bgcolor="white">
-        <center>
-            <style>
+</head>
+<body bgcolor="white">
+<center>
+<style>
 div.project_name {
   font-size: 150%;
   color: black;
@@ -94,37 +94,36 @@ div.page_links {
   text-align: center;
 }
 </style>
-            <center>
-                <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                    <tr>
-                        <td bgcolor="#dddddd">
-                            <div class="project_name">AOM Subscription Manager</div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="page_links">
-                                <a href="aom.html"></a>  |
+<center>
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td bgcolor="#dddddd">
+<div class="project_name">Untitled Gantt Project</div>
+</td>
+</tr>
+<tr>
+<td>
+<div class="page_links">
+<a href="aom.html"></a>  |
           <a href="aom-chart.html">Gantt</a> |
-          <a href="aom-tasks.html">Tasca</a> |
+          <a href="aom-tasks.html">Tarea</a> |
           <a href="aom-resources.html">Recursos</a>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
-            </center>
-            <br>
-            <br>
-            <img src="aom.png">
-            <br>
-        </center>
-        <br>
-        <table width="100%" border="0" cellpadding="0" cellspacing="0">
-            <tr>
-                <td bgcolor="#6d9ec6" width="50%"><font color="#FFFFFF"><b>Ganttproject (2.8.9 Pilsen (build 2335))</b></font></td><td bgcolor="#6d9ec6" width="50%" align="right"><b><a href="http://ganttproject.biz">ganttproject.biz</a></b>
-                    <br>
-                    <b>30/11/18 - 13:45:05</b></td>
-            </tr>
-        </table>
-    </body>
+</div>
+</td>
+</tr>
+</table>
+</center>
+<br>
+<br>
+<img src="aom.png"><br>
+</center>
+<br>
+<table width="100%" border="0" cellpadding="0" cellspacing="0">
+<tr>
+<td bgcolor="#6d9ec6" width="50%"><font color="#FFFFFF"><b>Ganttproject (2.8.9 Pilsen (build 2335))</b></font></td><td bgcolor="#6d9ec6" width="50%" align="right"><b><a href="http://ganttproject.biz">ganttproject.biz</a></b>
+<br>
+<b>17/12/18 - 3:44:15</b></td>
+</tr>
+</table>
+</body>
 </html>
